--- a/WebPortfolio/WebPortfolio/WebPortfolio.csproj
+++ b/WebPortfolio/WebPortfolio/WebPortfolio.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\src\OvertimeRequest\" />
+  </ItemGroup>
+
 </Project>
